--- a/packages/api/nest/api-nest-module-auth-keycloak/package.json
+++ b/packages/api/nest/api-nest-module-auth-keycloak/package.json
@@ -14,27 +14,27 @@
   "dependencies": {
     "@js-modules/api-nest-keycloak-admin-client-cjs": "workspace:^0.0.0",
     "@js-modules/api-nest-utils": "workspace:^0.0.0",
-    "@nestjs/common": "^9.2.1",
+    "@nestjs/common": "^9.4.0",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.2.1",
-    "@nestjs/platform-express": "^9.2.1",
-    "@nestjs/swagger": "^6.2.1",
-    "@nestjs/testing": "^9.2.1",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/testing": "^9.4.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cookie-session": "^2.0.44",
-    "@types/express": "^4.17.16",
-    "@types/lodash": "^4.14.191",
+    "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.194",
     "@types/supertest": "^2.0.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
-    "keycloak-connect": "^21.0.1",
-    "keycloak-js": "^21.0.1",
+    "keycloak-connect": "^21.1.0",
+    "keycloak-js": "21.1.0-1",
     "lodash": "^4.17.21",
     "nest-keycloak-connect": "^1.9.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.15"
   },
   "eslintConfig": {
     "rules": {
