--- a/package.json
+++ b/package.json
@@ -22,31 +22,39 @@
     "prepublish": "pnpm lint:fix && pnpm test:coverage && pnpm lerna:build"
   },
   "dependencies": {
-    "@types/node": "^22.13.13"
+    "@types/node": "^24.2.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-angular": "^19.8.0",
-    "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "cross-env": "^7.0.3",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-angular": "^19.8.1",
+    "@types/jest": "^30.0.0",
+    "cross-env": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
-    "eslint-import-resolver-typescript": "^4.2.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-jsdoc": "^53.0.1",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "lerna": "^8.2.1",
+    "jest": "^30.0.5",
+    "lerna": "^8.2.3",
     "monorepo-mapper": "^1.0.5",
-    "nx": "21.0.3",
+    "nx": "21.3.11",
     "prettier": "^2.8.8",
-    "prettier-plugin-solidity": "^1.4.2",
-    "solhint": "^5.0.5",
-    "ts-jest": "^29.3.0",
-    "typescript": "^5.8.2"
+    "prettier-plugin-solidity": "^2.1.0",
+    "solhint": "^6.0.0",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.9.2"
+  },
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "eslintConfig": {
     "root": true,
