--- a/packages/apps/travel-log/apps-travel-log-web-keycloak-theme/tsconfig.build.json
+++ b/packages/apps/travel-log/apps-travel-log-web-keycloak-theme/tsconfig.build.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../../../../tsconfig.build.json",
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "jsx": "react-jsx",
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "composite": true,
     "noEmit": true
   },
-  "include": ["./src", "vite.config.ts"]
+  "include": ["vite.config.ts"]
 }
